--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,7 @@
 	background-color: #33aaaa;
 	border: solid 2px #00ffff;
 	color: #00ffff;
+	opacity: 0.7;
 }
 
 .btn_round {
@@ -37,6 +38,11 @@
 	background-image: url(../images/kotiki-31.jpg);
 	background-size: cover;
 	background-position: center center;
+	border: solid 4px #00ffff;
+}
+.button:hover {
+	opacity: 1;
+	outline:none;
 }
 
 @media only screen and (max-width: 680px) {
