--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,7 @@
 	display: flex;
 	flex-wrap: wrap;
 }
+
 .button {
 	display: block;
 	margin: 2%;
@@ -23,7 +24,12 @@
 	color: #00ffff;
 	opacity: 0.7;
 }
-
+.button i {
+	color: #ffffff;
+}
+/*.main_content .button {
+	order: 3;
+}*/
 .btn_round {
 	border-radius: 50%;
 }
@@ -49,5 +55,8 @@
 	.button {
 		width: 98%;
 		height: 30vmin;
+	}
+	.main_content .button:first-child {
+		order: 5;
 	}
 }
